--- a/Clock.html
+++ b/Clock.html
@@ -105,8 +105,8 @@
 </head>
 <body>
     <div class="instructions">
-        <h1>مصطفي مازن فوزي<H1>
-        <H1>مدرسة الوحدة العربية <H1>
+        Drag the clock hands to set the time!<br>
+        Blue hand = Hour hand | Red hand = Minute hand
     </div>
     <div class="clock-container">
         <div class="clock">
